# mukoko-news

./: .env.example  .env.local  .gitignore  ADMIN_MIGRATION_COMPLETE.md  API_SECRET_SETUP.md  CHANGELOG.md  CLAUDE.md  COMPONENT_AUDIT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  NATIVEWIND_MIGRATION_SESSION2.md  NATIVEWIND_MIGRATION_STATUS.md  NATIVEWIND_MIGRATION_SUMMARY.md  README.md  SECURITY.md  eslint.config.js  next.config.ts  package-lock.json  package.json  plan.md  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.json
.husky/: pre-commit
admin/: .gitignore  index.html  package.json  tailwind.config.js  vercel.json  vite.config.ts
backend/: README.md  index.ts  package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
database/: consolidated_schema.sql  schema.sql  seed.sql
mobile/: App.js  (+14 more)
processing/: pyproject.toml  wrangler.jsonc
processing/mongo-proxy/: package-lock.json  package.json  wrangler.toml
processing/mongo-proxy/src/: index.js
processing/services/: ai_client.py  article_ai.py  clustering.py  content_cleaner.py  content_extractor.py  feed_ranker.py  keyword_extractor.py  mongodb.py  quality_scorer.py  router.py  rss_parser.py  search_processor.py
processing/src/: entry.py
processing/src/services/: __init__.py  analytics.py  article_ai.py  clustering.py  content_cleaner.py  content_extractor.py  cron.py  edge_cache_sync.py  feed_collector.py  feed_ranker.py  keyword_extractor.py  mongodb.py  router.py  rss_parser.py  search_processor.py  source_health.py  trending.py
processing/tests/: __init__.py  test_clustering.py  test_content_cleaner.py  test_content_extractor.py  test_cron.py  test_edge_cache_sync.py  test_feed_collector.py  test_feed_ranker.py  test_quality_scorer.py  test_rss_parser.py  test_source_health.py  test_trending.py
(+301 files in other folders)
