[project]
name = "mukoko-news-api"
version = "0.1.0"
description = "Mukoko News API — Python Worker for data processing, RSS, AI, and MongoDB operations"
requires-python = ">=3.12"
dependencies = [
    "workers-py",
    "fastapi",
    "lxml",
    "beautifulsoup4",
    "bleach",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["src"]
